# car_api

./: .gitignore  Dockerfile  Dockerfile.mkdocs  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements_docs.txt
car_api/: app.py
car_api/core/: security.py  settings.py
car_api/models/: __init__.py  cars.py  users.py
car_api/routers/: auth.py  brands.py  cars.py  users.py
car_api/schemas/: brands.py  cars.py  users.py
docs/: api-endpoints.md  authentication-security.md  configuration.md  contributing.md  deployment.md  development.md  guidelines.md  index.md  installation.md  overview.md  prerequisites.md  project-structure.md  release-notes.md  system-modeling.md  tests.md
migrations/: env.py
migrations/versions/: 11fcad7ed304_create_car_and_brand_tables.py  22063608a551_create_users_tables.py
tests/: conftest.py  test_auth.py  test_brands.py  test_cars.py  test_db.py  test_users.py
